--- a/src/Day02/sayfa4.html
+++ b/src/Day02/sayfa4.html
@@ -13,9 +13,9 @@
          Tıkla Google a git</a>
 
 <br> <a name="ust"></a>
-<h2> İnterview Soruları</h2>
+<h2> Interview Soruları</h2>
 <br> <a href="#Soru1">1- Test nedir ? </a>
-<br> <a href="#Soru2">2- Automation tets ne zaman başlar ?</a>
+<br> <a href="#Soru2">2- Automation test ne zaman başlar ?</a>
 <br> <a href="#Soru3">3- Neden Automation test yapılır ?</a>
 
 <br>
@@ -66,7 +66,7 @@
 <br>
 
 <a name="Soru1"></a>  <!-- hedef link noktası -->
-Cevap 1: Beklenen le oluşanın karşılaştırılmasıdır.
+Cevap 1: Beklenen ile oluşanın karşılaştırılmasıdır.
 <br><a href="#ust">Yukarı</a>
 <br>
 <br>
@@ -164,7 +164,7 @@ Cevap 2: Manuel test bitince, buglar bitince
 <br>
 <br>
 <a name="Soru3"></a>  
-Cevap 3: Daha az insan kaynağı ve daha az malite ve hızlı ve hatasız
+Cevap 3: Daha az insan kaynağı ve daha az malite, hızlı ve hatasız
 <br><a href="#ust">Yukarı</a>
 <br>
 <br>
